syntax = "proto3";

package proto;

import "auth_method.proto";

service UserManage {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc deleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc lookupUser(LookupUserRequest) returns (LookupUserResponse) {}
  rpc setPassword(SetPasswordRequest) returns (SetPasswordResponse) {}
  rpc checkPassword(CheckPasswordRequest) returns (CheckPasswordResponse) {}
}

message User {
  int64 user_id = 1;
  string user_name = 2;
  string email = 3;
  string phone_number = 4;

  repeated AuthMethod auth_method = 5;
}

message CreateUserRequest {
  string user_name = 1;
  string email = 2;
  string phone_number = 3;
}

message CreateUserResponse {
  User created_user = 1;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  User deleted_user = 1;
}

message LookupUserRequest {
  int64 user_id = 1;
}

message LookupUserResponse {
  User user = 1;
}

message SetPasswordRequest {
  int64 user_id = 1;
  string password = 2;
}

message SetPasswordResponse {
  User updated_user = 1;
}

message CheckPasswordRequest {
  int64 user_id = 1;
  string password = 2;
}

message CheckPasswordResponse {
  bool match = 1;
}

