syntax = "proto3";

package proto;

service UserManage {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc deleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
  int64 user_id = 1;
}

message CreateUserRequest {
  User user_to_create = 1;
}

message CreateUserResponse {
  User created_user = 1;
}

message DeleteUserRequest {
}

message DeleteUserResponse {
}

